# cpp-http-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CommandLineOptions.hpp  ErrorResponse.hpp  HttpRequest.hpp  HttpResponse.hpp  Logger.hpp  Router.hpp  Server.hpp  ServerConfig.hpp  SocketHandle.hpp  StaticFileHandler.hpp
public/: app.js  index.html  style.css
src/: CommandLineOptions.cpp  ErrorResponse.cpp  HttpRequest.cpp  HttpResponse.cpp  Logger.cpp  Router.cpp  Server.cpp  StaticFileHandler.cpp  main.cpp
tests/: test_main.cpp
